--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
-        "string": "cpp"
+        "string": "cpp",
+        "system_error": "cpp"
     },
     "editor.formatOnSave": true,
     "clang-format.style": "WebKit"
