--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,9 @@ set(CMAKE_CXX_EXTENSIONS off)
 
 enable_testing()
 
-set(SOURCES analytics.cpp analytics.h)
+set(SOURCES analytics.cpp analytics.h
+    http-curl.cpp http-curl.hpp
+    http-none.hpp)
 
 include(FindCURL)
 
