Incorporate feedback from Achille.
We use shared_ptr to return the response back, and fixed a few
other issues.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,8 @@
         "curl.h": "c",
         "typecheck-gcc.h": "c",
         "analytics.h": "c",
-        "exception": "c"
+        "exception": "c",
+        "ios": "cpp"
     },
     "editor.formatOnSave": true,
     "clang-format.style": "WebKit",
