Pluggable HTTP transport methods -- baked in.
This ships with a CURL based implementation.  A little CMAKE
and #ifdef glue will be supplied later so that the code can be
compiled without bringing libcurl in at all (provided another
transport provider is available.)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,24 @@
         "typecheck-gcc.h": "c",
         "analytics.h": "c",
         "exception": "c",
-        "ios": "cpp"
+        "ios": "cpp",
+        "http-curl.hpp": "c",
+        "__config": "c",
+        "cstddef": "c",
+        "initializer_list": "c",
+        "new": "c",
+        "stdexcept": "c",
+        "typeinfo": "c",
+        "stddef.h": "c",
+        "json.hpp": "c",
+        "http-curl.cpp": "c",
+        "array": "c",
+        "iterator": "c",
+        "vector": "c",
+        "catch.hpp": "c",
+        "multi.h": "c",
+        "memory": "c",
+        "http-none.hpp": "c"
     },
     "editor.formatOnSave": true,
     "clang-format.style": "WebKit",
