Linux build fixes.
This includes finding the threads library stuff, and some C++ tweaks
to conform to the standards as they exist on Linux (macOS was more
lenient.)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,7 +25,9 @@
         "multi.h": "c",
         "memory": "c",
         "http-none.hpp": "c",
-        "__locale": "cpp"
+        "__locale": "cpp",
+        "condition_variable": "c",
+        "__mutex_base": "cpp"
     },
     "editor.formatOnSave": true,
     "clang-format.style": "WebKit",
