--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,31 @@
-language: cpp
-sudo: false
+language: generic
+dist: trusty
 matrix:
   include:
     - os: linux
-      compiler:
-        - clang
-        - gcc
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-4.9
+      env:
+        - COMPILER_NAME=gcc
+        - CC=gcc-4.9
+        - CXX=g++-4.9
+
+    - os: linux
+      addons:
+        apt:
+          sources:
+            - llvm-toolchain-trusty-4.0
+          packages:
+            - clang-4.0
+      env:
+        - COMPILER_NAME=clang
+        - CC=clang-4.0
+        - CXX=clang++-4.0
+
     - os: osx
       compiler: clang
 # we may need to install libcurl, valgrind, and the custom version of libcurl
