--- a/.travis.yml
+++ b/.travis.yml
@@ -4,24 +4,25 @@ dist: trusty
 matrix:
   include:
     - os: linux
-      compiler: gcc
       addons:
         apt:
           sources:
             - ubuntu-toolchain-r-test
           packages:
             - g++-4.9
-      env: COMPILER=g++-4.9
-    - os: linux:
-      compiler: clang
+      env:
+        - MATRIX_EVAL="CC=gcc-4.9 && CXX=g++-4.9"
+
+    - os: linux
       addons:
         apt:
           sources:
-            - ubuntu-toolchain-r-test
-            - llvm-toolchain-precise-3.6
+            - llvm-toolchain-trusty-4.0
           packages:
-            - clang-3.6
-      env: COMPILER=clang++-3.6
+            - clang-4.0
+      env:
+        - MATRIX_EVAL="CC=clang-4.0 && CXX=clang++-4.0"
+
     - os: osx
       compiler: clang
 # we may need to install libcurl, valgrind, and the custom version of libcurl
