--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,4 @@
 language: cpp
-sudo: true
 dist: trusty
 matrix:
   include:
@@ -11,7 +10,8 @@ matrix:
           packages:
             - g++-4.9
       env:
-        - MATRIX_EVAL="CC=gcc-4.9 && CXX=g++-4.9"
+        - CC=gcc-4.9
+        - CXX=g++-4.9
 
     - os: linux
       addons:
@@ -21,7 +21,8 @@ matrix:
           packages:
             - clang-4.0
       env:
-        - MATRIX_EVAL="CC=clang-4.0 && CXX=clang++-4.0"
+        - CC=clang-4.0
+        - CXX=clang++-4.0
 
     - os: osx
       compiler: clang
