--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-language: cpp
+language: generic
 dist: trusty
 matrix:
   include:
@@ -10,6 +10,7 @@ matrix:
           packages:
             - g++-4.9
       env:
+        - COMPILER_NAME=gcc
         - CC=gcc-4.9
         - CXX=g++-4.9
 
@@ -21,6 +22,7 @@ matrix:
           packages:
             - clang-4.0
       env:
+        - COMPILER_NAME=clang
         - CC=clang-4.0
         - CXX=clang++-4.0
 
