--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,6 @@ set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIED on)
 set(CMAKE_CXX_EXTENSIONS off)
 find_package(Threads REQUIRED)
-
 enable_testing()
 
 set(SOURCES analytics.cpp analytics.hpp
@@ -23,7 +22,7 @@ set(SOURCES analytics.cpp analytics.hpp
     http.hpp http-curl.cpp http-curl.hpp
     http-none.hpp)
 
-include(FindCURL)
+find_package(CURL REQUIRED)
 
 # Dynamic library
 add_library(${PROJECT_NAME} ${SOURCES})
@@ -32,10 +31,6 @@ target_link_libraries(${PROJECT_NAME} ${CURL_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT
 # Static library
 add_library(${PROJECT_NAME}_static STATIC ${SOURCES})
 target_link_libraries(${PROJECT_NAME}_static ${CURL_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
-
-if(NOT CURL_FOUND)
-    message(FATAL_ERROR "Cannot find libcurl")
-endif()
 
 include_directories(AFTER SYSTEM ${CURL_INCLUDE_DIRS} ${PROJECT_SOURCE_DIR})
 
