--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,7 +1,4 @@
 version: 0.1.{build}
-image:
-  - Visual Studio 2015
-  - Visual Studio 2017
 environment:
   global:
     CFLAGS: /MP
@@ -44,7 +41,7 @@ environment:
 
 init:
   - cmd: cmake --version
-  - C:\\"Program Files (x86)"\\"%VSINSTALL%"\\vcvarsll.bat %MSVC_PLATFORM%"
+  - C:\"Program Files (x86)"\%VSINSTALL%\vcvarsll.bat %MSVC_PLATFORM%
 
 before_build:
 
