--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -8,40 +8,40 @@ environment:
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
       GENERATOR: NMake Makefiles
       CFG: Debug
-      VSINSTALL: "\\Microsoft Visual Studio 14\\VC"
+      VSINSTALL: /\"Microsoft Visual Studio 14\"/VC
       MSVC_PLATFORM: x86
 
     # 32-bit Studio 2015
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
       GENERATOR: Visual Studio 14 2015
       CFG: Debug
-      VSINSTALL: "\\Microsoft Visual Studio 14\\VC"
+      VSINSTALL: /\"Microsoft Visual Studio 14\"/VC
       MSVC_PLATFORM: x86
 
     # 64-bit Studio 2015
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
       GENERATOR: Visual Studio 14 2015
       CFG: Debug
-      VSINSTALL: "\\Microsoft Visual Studio 14\\VC"
+      VSINSTALL: /\"Microsoft Visual Studio 14\"/VC
       MSVC_PLATFORM: amd64
 
     # 32-bit Studio 2017
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
       GENERATOR: Visual Studio 15 2017
       CFG: Debug
-      VSINSTALL: "\\Microsoft Visual Studio\\2017\\Community\\VC\\Auxiliary\\Build"
+      VSINSTALL: /\"Microsoft Visual Studio\"/2017/Community/VC/Auxiliary/Build
       MSVC_PLATFORM: x86
 
     # 64-bit Studio 2017
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
       GENERATOR: Visual Studio 15 2017
       CFG: Debug
-      VSINSTALL: "\\Microsoft Visual Studio\\2017\\Community\\VC\\Auxiliary\\Build"
+      VSINSTALL: /\"Microsoft Visual Studio\"/2017/Community/VC/Auxiliary/Build
       MSVC_PLATFORM: amd64
 
 init:
   - cmd: cmake --version
-  - C:\"Program Files (x86)"\%VSINSTALL%\vcvarsll.bat %MSVC_PLATFORM%
+  - C:/\"Program Files (x86)\"/%VSINSTALL%/vcvarsll.bat %MSVC_PLATFORM%
 
 before_build:
 
