Substantial fixes for Windows.
When we switched to start testing with AppVeyor, I found many problems.
There appears to be a subtle race condition somewhere in the Windows
stack, but adding a brief delay (10ms) clears it and keeps the queue
from getting stuck.

While here, we have added a native WinInet transport which is used by
default on Windows instead of CURL, and CMake support to select it,
as well as a switch to remove all HTTP transports (-DNO_DEFAULT_HTTP=ON).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,8 @@
 cmake_minimum_required (VERSION 3.1)
 project(analytics-cpp)
 
+option(NO_DEFAULT_HTTP OFF)
+
 # We require C++ 11.
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIED on)
@@ -17,20 +19,32 @@ set(CMAKE_CXX_EXTENSIONS off)
 find_package(Threads REQUIRED)
 enable_testing()
 
-set(SOURCES analytics.cpp analytics.hpp
-    date.hpp json.hpp
-    http.hpp http-curl.cpp http-curl.hpp
-    http-none.hpp)
+if (NO_DEFAULT_HTTP)
+    set(HTTP_SOURCES http-none.hpp)
 
-find_package(CURL REQUIRED)
+elseif (CMAKE_SYSTEM_NAME MATCHES Windows)
+    add_definitions(-DSEGMENT_USE_WININET)
+    set(HTTP_SOURCES http-wininet.hpp http-wininet.cpp)
+    set(HTTP_LIBRARY wininet)
+
+else()
+    find_package(CURL REQUIRED)
+    add_definitions(-DSEGMENT_USE_CURL)
+    set(HTTP_SOURCES http-curl.hpp http-curl.cpp)
+    set(HTTP_LIBRARY ${CURL_LIBRARIES})
+endif()
+
+set(SOURCES analytics.cpp analytics.hpp
+    date.hpp json.hpp http.hpp
+    ${HTTP_SOURCES})
 
 # Dynamic library
-add_library(${PROJECT_NAME} ${SOURCES})
-target_link_libraries(${PROJECT_NAME} ${CURL_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
+add_library(${PROJECT_NAME} ${SOURCES} ${HTTP_SOURCES})
+target_link_libraries(${PROJECT_NAME} ${HTTP_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
 
 # Static library
 add_library(${PROJECT_NAME}_static STATIC ${SOURCES})
-target_link_libraries(${PROJECT_NAME}_static ${CURL_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
+target_link_libraries(${PROJECT_NAME}_static ${HTTP_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
 
 include_directories(AFTER SYSTEM ${CURL_INCLUDE_DIRS} ${PROJECT_SOURCE_DIR})
 
