--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,8 +9,10 @@
 
 cmake_minimum_required (VERSION 3.1)
 project(analytics-cpp)
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${PROJECT_SOURCE_DIR}/cmake)
 
-option(NO_DEFAULT_HTTP OFF)
+option(NO_DEFAULT_HTTP "Disable builtin HTTP transport (stub only)." OFF)
+option(COVERALLS "Generate coveralls data" OFF)
 
 # We require C++ 11.
 set(CMAKE_CXX_STANDARD 11)
@@ -18,6 +20,12 @@ set(CMAKE_CXX_STANDARD_REQUIED on)
 set(CMAKE_CXX_EXTENSIONS off)
 find_package(Threads REQUIRED)
 enable_testing()
+
+if (COVERALLS)
+    message(STATUS "Enabling coveralls.")
+    include(Coveralls)
+    coveralls_turn_on_coverage()
+endif()
 
 if (NO_DEFAULT_HTTP)
     set(HTTP_SOURCES http-none.hpp)
@@ -37,6 +45,13 @@ endif()
 set(SOURCES analytics.cpp analytics.hpp
     date.hpp json.hpp http.hpp
     ${HTTP_SOURCES})
+
+# Coverage only for our own code, not the date or json library we use.
+set (COVERALLS_SRCS analytics.cpp analytics.hpp http.hpp ${HTTP_SOURCES})
+
+if (COVERALLS)
+    coveralls_setup("${COVERALLS_SRCS}" ON)
+endif()
 
 # Dynamic library
 add_library(${PROJECT_NAME} ${SOURCES} ${HTTP_SOURCES})
